--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,11 +7,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true">
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/greetingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
                 android:fontFamily="@font/sofia_pro_medium"/>
 
             <!-- Title Text -->
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/notesTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,6 +56,7 @@
             android:layout_height="35dp"
             android:layout_gravity="end"
             android:layout_marginEnd="20dp"
+            android:contentDescription="image"
             android:src="@drawable/ic_list"/>
 
     </LinearLayout>
@@ -85,14 +86,7 @@
         android:layout_below="@+id/searchBar"
         android:layout_marginTop="2dp"
         tools:listitem="@layout/item_user" />
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Long press to copy"
-        android:textSize="16sp"
-        android:layout_below="@+id/recyclerView"
-        android:padding="16dp" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addFab"
@@ -103,6 +97,7 @@
         android:layout_gravity="end"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="51dp"
+        android:contentDescription="image"
         android:src="@drawable/baseline_add_24"
         app:fabSize="normal" />
 </RelativeLayout>
