background images added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:contentDescription="shuffle"
-            android:src="@drawable/ic_list"
+            android:src="@drawable/ic_more_vert"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -63,6 +63,7 @@
             android:id="@+id/ivDarkTheme"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:visibility="invisible"
             android:contentDescription="DARK MODE"
             android:src="@drawable/ic_dark_mode"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -76,17 +77,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginStart="16dp"
         android:drawableStart="@drawable/ic_location_pin"
         android:ellipsize="marquee"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:fontFamily="@font/sofia_pro_medium"
         android:marqueeRepeatLimit="marquee_forever"
-        android:paddingEnd="20dp"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="Location Address That Is Too Long To Fit In One Line And Needs Scrolling"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +99,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_search"
+        android:drawableStart="@drawable/ic_search_png"
         android:drawablePadding="4dp"
         android:hint="Search Here"
         android:imeOptions="actionSearch"
@@ -111,12 +112,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/locationAddress" />
 
+
     <!-- RecyclerView -->
+    <ImageView
+        android:id="@+id/ivNoData"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/white"
+        android:src="@drawable/no_data"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        app:layout_constraintVertical_bias="0.655" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
